--- a/src/app/components/template-builder/template-builder.component.scss
+++ b/src/app/components/template-builder/template-builder.component.scss
@@ -192,7 +192,7 @@
   background-color: white;
   padding: 20px;
   border-radius: 8px;
-  width: 500px;
+  width: fit-content;
   max-width: 90%;
   max-height: 90vh;
   overflow-y: auto;
@@ -265,4 +265,15 @@
 .copayment-node {
   background-color: #e60000;
   color: white;
+}
+
+.modal-header{
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.bg-blue-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 245 247);
 }
