--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 /* Global Styles */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 
 :root {
   /* Color System */
